Cambiamento prodotti, in array

--- a/app/views/prodotti.html
+++ b/app/views/prodotti.html
@@ -34,9 +34,9 @@
             </tr>
         </thead>
         <tbody>
-            <tr class="cursor-pointer" ng-click="" ng-repeat="(carico, prodotti) in prodottiCarichi" rel="{{carico}}">
-                <th><div class="text-center fsize12">{{carico}}</div></th>
-                <td colspan="2" ng-repeat="pr in prodotti | orderBy:tipo">
+            <tr class="cursor-pointer" ng-click="" ng-repeat="row in prodottiCarichi | orderBy:carico" rel="{{carico}}">
+                <th><div class="text-center fsize12">{{row.carico}}</div></th>
+                <td colspan="2" ng-repeat="pr in row.prodotti | orderBy:tipo">
                     <span class="pull-left">{{pr.kg}}</span>
                     <span class="pull-right">{{pr.scatole}}</span>
                 </td>
