--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,3 +10,7 @@
 
 .fsize12{font-size: 12px;}
 .fsize10{font-size: 10px;}
+
+tr{position: relative;}
+
+.tr-options{position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1;}
