--- a/app/views/supermercati.html
+++ b/app/views/supermercati.html
@@ -9,22 +9,23 @@
                 <input class="span2" id="appendedInputButton" type="text" ng-model="search">
                 <button class="btn" type="button">Cerca</button>
             </div>
-            <div class="span2">
+            <div class="span2" ng-show="pages>1">
                 <p>Da {{((rowsNumber*(currentPage-1))+1)}} a {{(rowsNumber*currentPage)}} di {{supermercati.length}} elementi</p>
             </div>
-            <div class="span7 pull-right">
-                <pagination num-pages="totalPages()" current-page="currentPage" class="pagination-small pagination-no-margin text-right" previous-text="Precedento" next-text="Successivo"></pagination>
+            <div class="span7 pull-right" ng-show="pages>1">
+                <pagination num-pages="pages" current-page="currentPage" class="pagination-small pagination-no-margin text-right" previous-text="Precedento" next-text="Successivo"></pagination>
             </div>
         </div>
+        
         <table class="table table-bordered table-striped table-hover table-container table-condensed">
         <thead>
             <th>Nome</th><th>Indirizzo</th><th>Comune</th><th>Catena</th>
         </thead>
         <tbody>
-            <tr class="cursor-pointer" ng-click="openDetails(supermercato.id)" ng-repeat="supermercato in supermercati | filter:search | range:((rowsNumber*(currentPage-1))+1):(rowsNumber*currentPage)" rel="{{supermercato.index}}">
+            <tr class="cursor-pointer" ng-click="openDetails(supermercato.id)" ng-repeat="supermercato in supermercati | filter:search | range:((rowsNumber*(currentPage-1))):(rowsNumber*currentPage)" rel="{{supermercato.index}}">
                 <td>{{supermercato.nome}}</td>
                 <td>{{supermercato.indirizzo}}</td>
-                <td>{{supermercato.id_comune}}</td>
+                <td ng-model="comune" ng-init="comune=getComuneById(supermercato.id_comune)">{{comune.nome}}</td>
                 <td>{{supermercato.id_ccatena}}</td>
             </tr>
         </tbody>
