Update products.js, to last api version

--- a/app/views/admin/supermercati.html
+++ b/app/views/admin/supermercati.html
@@ -8,16 +8,16 @@
             <div class="span3 bs-docs-sidebar" ng-include="'views/admin/sidebar.html'">
             </div>
             <div class="span9 main-content">
-                <form class="form-inline" ng-show="search.visible" ng-submit="getSupermercati(comuneSearch, provinciaSearch, catenaSearch)">
-                    <select ui-select2="{ allowClear: true}" ng-model="comuneSearch" placeholder="Comune">
-                        <option></option>
-                        <option ng-value="comune.id" ng-repeat="comune in comuni">{{comune.nome}}</option>
-                    </select>
-                    <select ui-select2="{ allowClear: true}" ng-model="provinciaSearch" placeholder="Provincia">
+                <form class="form-inline" ng-show="search.visible" ng-submit="getSupermercati()">
+                    <select ui-select2="{ allowClear: true}" ng-model="search.provincia" placeholder="Provincia">
                         <option></option>
                         <option ng-value="provincia.id" ng-repeat="provincia in provincie">{{provincia.nome}}</option>
                     </select>
-                    <select ui-select2="{ allowClear: true}" ng-model="catenaSearch" placeholder="Catena">
+                    <select ui-select2="{ allowClear: true}" ng-model="search.comune" placeholder="Comune">
+                        <option></option>
+                        <option ng-value="comune.id" ng-repeat="comune in comuni | filter:{id_provincia: provinciaSearch}">{{comune.nome}}</option>
+                    </select>
+                    <select ui-select2="{ allowClear: true}" ng-model="search.catena" placeholder="Catena">
                         <option></option>
                         <option ng-value="catena.id" ng-repeat="catena in catene">{{catena.nome}}</option>
                     </select>
@@ -55,14 +55,36 @@
                         -->
                         </div>
                     </div>
+                    <div class="row">
+                        <form class="form-inline span3">
+                            <span>Se selezionati: </span>
+                            <button class="btn" ng-click="setToggledSupermercati(1)">Abilita</button>
+                            <button class="btn" ng-click="setToggledSupermercati(0)">Disabilita</button>
+                        </form>
+                    </div>
                     <table class="table table-bordered table-striped table-hover table-container table-condensed">
                         <thead>
-                            <!--<th>OK</th>-->
-                           <th>ID</th> <th>Nome</th><th>Indirizzo</th><th>Provincia</th><th>Comune</th><th>Catena</th><th>Capi Equipe</th>
+                           <th>
+                            <input type="checkbox"
+                                ng-model="checkedAll"
+                                ng-checked="checkedAll"
+                                toggle:all/>
+                            </th>
+                            <th>ID</th><th>ok</th><th>Nome</th><th>Indirizzo</th>
+                           <th>Provincia</th><th>Comune</th><th>Catena</th><th>Capi Equipe</th>
                         </thead>
-                        <tbody>
+                        <tbody> 
                             <tr class="cursor-pointer" ng-repeat="supermercato in supermercati | filter:filter_input | range:((rowsNumber*(currentPage-1))):(rowsNumber*currentPage)" rel="{{supermercato.index}}">
+                                <td ng-click="">
+                                    <input 
+                                        type="checkbox"
+                                        ng-model="supermercato.checked"
+                                        ng-true-value="1"
+                                        ng-false-value="0"
+                                    />
+                                </td>
                                 <td ng-click="">{{supermercato.id}}</td>
+                                <td ng-click="">{{supermercato.confermato}}</td>
                                 <td ng-click="">{{supermercato.nome}}</td>
                                 <td ng-click="">{{supermercato.indirizzo}}</td>
                                 <td ng-click="">{{supermercato.provincia}}</td>
