--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -18,3 +18,15 @@ tr{position: relative;}
 .main-content{
 	padding-top: 0;
 }
+
+.modal.fade.in {top: 5%!important;}
+.modal{width: 400px!important; max-height: 470px!important;}
+.modal-header {padding: 5px 15px!important;}
+.modal-footer {padding: 10px 15px 10px!important;}
+
+.modal-body {
+max-height: 348px!important;
+}
+
+.modal-body table tbody tr{height: 20px;}
+.modal-body table tbody tr input[type="number"]{margin-bottom: 0;}
