--- a/app/views/user/prodotti.html
+++ b/app/views/user/prodotti.html
@@ -59,7 +59,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="cursor-pointer" ng-repeat="pr in carico | orderBy:tipo">
+                        <tr class="" ng-repeat="pr in carico | orderBy:tipo">
                             <td class="">{{pr.tipo}}</td>
                             <td>
                                 <input type="number" class="span1" ng-model="pr.kg" required/>
