--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,6 +3,10 @@
 .center-container{}
 
 .table-container{}
+.table-adapt{width:auto;}
+.table-adapt tbody td.tipo{line-height: 40px;}
+.table-adapt tbody tr p{margin: 0 0 0 0;}
+.table-adapt tbody td{line-height: 20px;}
 
 .pagination-no-margin{margin: 0 0;}
 
@@ -10,8 +14,6 @@
 
 .fsize12{font-size: 12px;}
 .fsize10{font-size: 10px;}
-
-tr{position: relative;}
 
 .tr-options{position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1;}
 
