--- a/app/views/user/prodotti.html
+++ b/app/views/user/prodotti.html
@@ -1,8 +1,7 @@
 <div ng-include="'views/common/menu.html'"></div>
 <div  ng-controller="ProdottiCtrl">
     <div class="hero-unit">
-        <h2>Gestione prodotti</h2>
-        <h3>{{supermercato.nome}}, {{supermercato.indirizzo}}</h3>
+        <h3>Gestione prodotti - {{supermercato.nome}}, {{supermercato.indirizzo}}</h3>
     </div>
     <div class="container center-container">
         <div class="row-fluid">
@@ -13,10 +12,10 @@
         </div>
         <div class="row-fluid">
             <form class="form-inline">
-                <button class="btn btn-primary" ng-click="open()">Inserisci un nuovo carico</button>
+                <button class="btn btn-primary" ng-click="openNewCarico()">Inserisci un nuovo carico</button>
             </form>
         </div>
-        <table class="table table-bordered table-striped table-hover table-container table-condensed">
+        <table class="table table-bordered table-striped table-hover table-container table-condensed" ng-show="view==1">
         <thead>
             <tr>
                 <th><div class="text-center fsize12">N°</div></th>
@@ -34,14 +33,33 @@
         </thead>
         <tbody>
             <tr class="cursor-pointer" ng-click="" ng-repeat="(key, carico) in prodotti">
-                <td><div class="text-center fsize12">{{key}}</div></td>
-                <td colspan="2" ng-repeat="pr in carico | orderBy:tipo">
+                <td ng-click="openSetCarico(carico)"><div class="text-center fsize12">{{key}}</div></td>
+                <td colspan="2" ng-repeat="pr in carico | orderBy:tipo" ng-click="openSetCarico(carico)">
                     <span class="pull-left">{{pr.kg}}</span>
                     <span class="pull-right">{{pr.scatole}}</span>
                 </td>
             </tr>
         </tbody>
         <tfoot></tfoot>
+        </table>
+        <table class="table table-adapt table-bordered table-striped table-hover table-container table-condensed" ng-show="view==0">
+            <thead>
+                <tr>
+                    <th colspan="2" class="span2">Carichi</th>
+                    <th ng-repeat="(k, c) in prodotti" class="span1" style="text-align: center;">{{k}}</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="" ng-repeat="(key, prodotti) in prodottiByTipo | orderBy:tipo">
+                    <td class="tipo">{{key}}</td>
+                    <td><p>kg</p><p>scatole</p></td>
+                    <td ng-repeat="prodotto in prodotti | orderBy: carico" style="text-align: center;" class="cursor-pointer">
+                        <p>{{prodotto.kg}}</p>
+                        <p>{{prodotto.scatole}}</p>
+                    </td>
+                </tr>
+            </tbody>
+            <tfoot></tfoot>
         </table>
     </div>
     <script type="text/ng-template" id="myModalContent.html">
@@ -59,8 +77,8 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="" ng-repeat="pr in carico | orderBy:tipo">
-                            <td class="">{{pr.tipo}}</td>
+                        <tr class="" ng-repeat="pr in carico | orderBy:prodotto">
+                            <td class="">{{pr.prodotto}}</td>
                             <td>
                                 <input type="number" class="span1" ng-model="pr.kg" required/>
                             </td>
