--- a/app/views/user/prodotti.html
+++ b/app/views/user/prodotti.html
@@ -65,7 +65,7 @@
     <script type="text/ng-template" id="myModalContent.html">
         <form>
             <div class="modal-header">
-                <h3>Nuovo carico</h3>
+                <h3>{{modalTitle}}</h3>
             </div>
             <div class="modal-body new_carico_modal">
                 <table class="table table-bordered table-striped table-hover table-container table-condensed">
