--- a/app/views/user/prodotti.html
+++ b/app/views/user/prodotti.html
@@ -80,10 +80,10 @@
                         <tr class="" ng-repeat="pr in carico | orderBy:prodotto">
                             <td class="">{{pr.prodotto}}</td>
                             <td>
-                                <input type="number" class="span1" ng-model="pr.kg" required/>
+                                <input type="text" class="span1" ng-model="pr.kg" required/>
                             </td>
                             <td>
-                                <input type="number" class="span1" ng-model="pr.scatole" required/>
+                                <input type="text" class="span1" ng-model="pr.scatole" required/>
                             </td>
                         </tr>
                     </tbody>
