--- a/app/views/user/supermercati.html
+++ b/app/views/user/supermercati.html
@@ -4,50 +4,35 @@
          <h2>Supermercati</h2>
     </div>
     <div class="container center-container" >
-         <form class="form-inline" ng-show="search.visible" ng-submit="getSupermercati(comuneSearch, provinciaSearch, catenaSearch)">
-            <select ui-select2="{ allowClear: true}" ng-model="provinciaSearch" placeholder="Provincia">
-                <option></option>
-                <option ng-value="provincia.id" ng-repeat="provincia in provincie">{{provincia.nome}}</option>
-            </select>
-            <select ui-select2="{ allowClear: true}" ng-model="comuneSearch" placeholder="Comune">
-                <option></option>
-                <option ng-value="comune.id" ng-repeat="comune in comuni | filter:{id_provincia: provinciaSearch}">{{comune.nome}}</option>
-            </select>
-            <select ui-select2="{ allowClear: true}" ng-model="catenaSearch" placeholder="Catena">
-                <option></option>
-                <option ng-value="catena.id" ng-repeat="catena in catene">{{catena.nome}}</option>
-            </select>
-            <button type="submit" class="btn">Cerca</button>
-        </form>
-        <form>
-            <button class="btn" ng-show="!search.visible" ng-click="search.visible=true">Nuova ricerca</button>
-        </form>
         <div  ng-show="supermercati.length>0">
             <div class="row">
-                <div class="input-append span3">
-                    <input class="span2" id="appendedInputButton" type="text" ng-model="filter_input">
-                    <button class="btn" type="button">Filtra</button>
-                </div>
+                <form class="form-inline">
+                    <select ui-select2="{ allowClear: true}" ng-model="provinciaSearch" placeholder="Provincia">
+                        <option></option>
+                        <option ng-value="provincia.id" ng-repeat="provincia in provincie">{{provincia.nome}}</option>
+                    </select>
+                    <select ui-select2="{ allowClear: true}" ng-model="comuneSearch" placeholder="Comune">
+                        <option></option>
+                        <option ng-value="comune.id" ng-repeat="comune in comuni | filter:{id_provincia: provinciaSearch}">{{comune.nome}}</option>
+                    </select>
+                    <select ui-select2="{ allowClear: true}" ng-model="catenaSearch" placeholder="Catena">
+                        <option></option>
+                        <option ng-value="catena.id" ng-repeat="catena in catene">{{catena.nome}}</option>
+                    </select>
+                </form>
                 <div class="span2" ng-show="pages>1">
                     <p>{{(supermercati | filter: filter_input).length}} elementi</p>
                 </div>
                 <div class="span7 pull-right" ng-show="pages>1">
-                    <!--
-                    <div class="pagination pagination-small pagination-no-margin text-right" ng-if="supermercati.length>0">
-                        <ul>
-                            <li class="" ng-repeat="pag in getPagesNumber(((supermercati | filter: filter_input).length/rowsNumber | number: 0))" >
-                                <a>{{pag.label}}</a>
-                            </li>
-                        </ul>
-                    </div>-->
                 </div>
             </div>
+            {{pagination.currentPage()}}
             <table class="table table-bordered table-striped table-hover table-container table-condensed">
                 <thead>
                    <th>Nome</th><th>Indirizzo</th><th>Provincia</th><th>Comune</th><th>Catena</th><th>Capi Equipe</th>
                 </thead>
                 <tbody>
-                    <tr class="cursor-pointer" ng-repeat="supermercato in supermercati | filter:filter_input" rel="{{supermercato.index}}">
+                    <tr class="cursor-pointer" ng-repeat="supermercato in supermercati |                      filter:{id_catena: catenaSearch,id_comune: comuneSearch}|limitTo:pagination.currentPage()" rel="{{supermercato.index}}">
                         <td ng-click="openDetails(supermercato.id)">{{supermercato.nome}}</td>
                         <td ng-click="openDetails(supermercato.id)">{{supermercato.indirizzo}}</td>
                         <td ng-click="openDetails(supermercato.id)">{{supermercato.provincia}}</td>
