--- a/app/views/user/supermercati.html
+++ b/app/views/user/supermercati.html
@@ -26,7 +26,7 @@
                 <div class="span7 pull-right" ng-show="pages>1">
                 </div>
             </div>
-            {{pagination.currentPage()}}
+            {{supermercati.length}}
             <table class="table table-bordered table-striped table-hover table-container table-condensed">
                 <thead>
                    <th>Nome</th><th>Indirizzo</th><th>Provincia</th><th>Comune</th><th>Catena</th><th>Capi Equipe</th>
