--- a/app/views/admin/supermercati.html
+++ b/app/views/admin/supermercati.html
@@ -1,7 +1,7 @@
 <div  ng-controller="SupermercatiCtrl" >
     <div ng-include="'views/common/menu.html?version={{version}}'"></div>
     <div class="hero-unit">
-         
+        <h3>Gestione Supermercati</h3>
     </div>
     <div class="container center-container">
         <div  ng-show="supermercati.length>0">
